--- a/css/_tpl-about.scss
+++ b/css/_tpl-about.scss
@@ -14,6 +14,7 @@
     }
     .content__title {
         text-align: left;
+        padding-bottom: 30px;
         h1 {
             color: #fff;
             font-size: 40px;
@@ -23,15 +24,13 @@
             margin-bottom: 60px;
         }
         &::after {
-            @include mn992 {
-                content: '';
-                width: 50px;
-                height: 3px;
-                background: white;
-                display: block;
-                position: relative;
-                bottom: -30px;
-            }
+            content: '';
+            width: 50px;
+            height: 3px;
+            background: white;
+            display: block;
+            position: relative;
+            bottom: -30px;
         }
     }
     .b-content__desc {
@@ -279,12 +278,22 @@
 
 .s-team-advantages {
     background-image: linear-gradient(-45deg, rgba(52, 0, 131, 0.81) 0%, rgba(0, 159, 123, 0.81) 100%);
-    padding-top: 180px;
+    padding-top: 330px;
     padding-bottom: 150px;
     position: relative;
     background: url(../img/team-bg1.jpg) no-repeat top center;
     background-size: cover;
-    @include mn1200 {padding-top: 370px;}
+    @include mn1200 {}
+    &::before {
+        content: '';
+        background: url(../img/bg-team5.png) top center no-repeat;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 272px;
+        background-size: cover;
+    }
     &__title {
         margin-bottom: 40px;
         text-align: center;
@@ -356,16 +365,318 @@
 
 .s-team-about {
     position: relative;
-    height: 500px;
     background: #fff;
-    // &::before {
-    //     content: '';
-    //     position: absolute;
-    //     left: 0;
-    //     right: 0;
-    //     top: -146px;
-    //     height: 146px;
-    //     background: url(../img/bg-team-1.png) no-repeat;
-    //     background-size: cover;
-    // }
+    padding-bottom: 180px;
+    &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: -200px;
+        height: 200px;
+        background: url(../img/bg-team3.png) no-repeat;
+        background-size: cover;
+    }
+    &__inner {
+        padding: 30px 0;
+        @include mn768 {
+            display: flex;
+            flex-wrap: wrap;
+        }
+    }
+    &__left,
+    &__right {
+        @include mn768 {
+            width: 50%;
+        }
+    }
+    &__title {
+        color: #000;
+        padding-bottom: 30px;
+        margin-bottom: 30px;
+        font-size: 40px;
+        text-transform: uppercase;
+        &::after {
+            content: '';
+            width: 50px;
+            height: 3px;
+            background: black;
+            display: block;
+            position: relative;
+            bottom: -30px;
+        }
+    }
+    &__text {
+        font-size: 18px;
+        font-weight: 300;
+        @include mn1200 {
+            font-size: 24px;
+        }
+        p {
+            margin-bottom: 0.5em;
+        }
+    }
+}
+
+.b-mission {
+    position: relative;
+    margin: 20px auto;
+    width: 300px;
+    height: 300px;
+    @include mn1400 {
+        width: 450px;
+        height: 450px;
+    }
+    &__inner {
+        background-color: #f8615a;
+        box-shadow: inset 49.5px 49.5px 100px rgba(255, 255, 255, 0.2);
+        padding: 20px 20px 20px 60px;
+        border-radius: 50%;
+        color: white;
+        display: flex;
+        align-items: center;
+        align-content: center;
+        flex-wrap: wrap;
+        font-size: 18px;
+        font-weight: 100;
+        overflow: hidden;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        @include mn1400 {
+            padding: 20px 100px 60px 100px;
+            line-height: 1.5;
+            font-size: 22px;
+        }
+        &::before {
+            content: '';
+            width: 300px;
+            height: 300px;
+            opacity: 0.5;
+            background-color: #f8615a;
+            box-shadow: 0 0 50px rgba(255, 255, 255, 0.3);
+            position: absolute;
+            border-radius: 50%;
+            top: -30px;
+            left: -15px;
+            @include mn1400 {
+                width: 450px;
+                height: 450px;
+                top: -60px;
+                left: -40px;
+            }
+        }
+    }
+    .shadow {
+        position: absolute;
+        bottom: 45px;
+        right: 74px;
+        z-index: 0;
+        box-shadow: 0 0 80px 40px #f8615a66;
+    }
+    &__title {
+        font-size: 1.36em;
+        font-weight: 900;
+        position: relative;
+    }
+    &__desc {
+        position: relative;
+        &::before {
+            content: '\2014';
+            margin-right: .3em;
+        }
+    }
+}
+
+.b-digits {
+    margin: 40px 0;
+    font-size: 20px;
+    text-align: center;
+    @include mn768 {
+        font-size: 14px;
+        text-align: left;
+        display: flex;
+    }
+    @include mn1200 {
+        font-size: 20px;
+    }
+    &__item {
+        margin-bottom: 20px;
+        @include mn768 {
+            width: 25%;
+            padding: 0 15px;
+        }
+        &:first-child,
+        &:last-child {
+            .b-digits__num::before {
+                content: '>';
+                font-size: .66em;
+            }
+        }
+    }
+    &__num {
+        font-size: 3.6em;
+        font-weight: 900;
+        display: inline-block;
+        line-height: 1;
+        padding-bottom: 15px;
+        margin-bottom: 15px;
+        &::after {
+            content: '';
+            width: 50px;
+            height: 3px;
+            background: red;
+            display: block;
+            position: relative;
+            bottom: -15px;
+        }
+    }
+    &__desc {
+        font-weight: 300;
+        text-transform: uppercase;
+    }
+}
+
+.s-team-work {
+    position: relative;
+    &::before {
+        content: '';
+        background: url(../img/bg-team6.png) top no-repeat;
+        background-size: cover;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: -221px;
+        height: 221px;
+    }
+}
+
+.b-works {
+    margin-top: 50px;
+    text-align: center;
+    @include mn768 {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    @include mn1200 {
+        justify-content: space-between;
+    }
+    &__item {
+        width: 280px;
+        height: 330px;
+        background: white;
+        margin-bottom: 40px;
+        position: relative;
+        padding: 0 10px 30px 30px;
+        text-align: left;
+        display: inline-block;
+        vertical-align: top;
+        @include mn550 {
+            margin-right: 40px;
+        }
+        @include mn1200 {
+            margin-right: 0;
+        }
+    }
+    &__item::before {
+        content: '';
+        opacity: 0.5;
+        border: 1px solid white;
+        position: absolute;
+        left: -20px;
+        right: 20px;
+        bottom: -20px;
+        top: 20px;
+    }
+    &__img {
+        width: 150px;
+        height: 150px;
+        background: $red;
+        border-radius: 50%;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        top: 30px;
+    }
+    &__caption {
+        font-size: 20px;
+        font-weight: 800;
+        padding-bottom: 20px;
+        margin-bottom: 20px;
+        position: relative;
+        text-transform: uppercase;
+        &::after {
+            content: '';
+            width: 50px;
+            height: 1px;
+            background: black;
+            display: block;
+            position: absolute;
+            left: 0;
+            bottom: 0;
+        }
+    }
+    &__desc {
+        font-size: 14px;
+        line-height: 1.3;
+        p {
+            position: relative;
+            padding-left: 10px;
+            &::before {
+                content: '-';
+                position: absolute;
+                left: 0;
+            }
+        }
+    }
+    &__item_lamp {
+        background: transparent;
+        &::before {
+            display: none;
+        }
+    }
+    &__lamp {
+        position: absolute;
+        width: 93px;
+        left: 0;
+        top: 80px;
+        &::after {
+            content: '';
+            position: absolute;
+            box-shadow: 0 0 150px 60px rgba(255, 255, 255, .8);
+            left: 50%;
+            top: 50%;
+        }
+    }
+    &__lamp-title {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        font-size: 40px;
+        font-weight: 900;
+        line-height: 1;
+        color: white;
+        &::before {
+            content: '';
+            width: 50px;
+            height: 3px;
+            background: white;
+            display: block;
+            margin-bottom: 20px;
+        }
+        &::after {
+            content: '';
+            width: 134px;
+            height: 134px;
+            background: white;
+            position: absolute;
+            border-radius: 50%;
+            opacity: .1;
+            right: -41px;
+            bottom: -24px;
+        }
+    }
 }
