--- a/css/main.css
+++ b/css/main.css
@@ -5857,7 +5857,8 @@ img {
   .content-wrap_team .container-fluid {
     max-width: 1100px; }
   .content-wrap_team .content__title {
-    text-align: left; }
+    text-align: left;
+    padding-bottom: 30px; }
     .content-wrap_team .content__title h1 {
       color: #fff;
       font-size: 40px;
@@ -5865,15 +5866,14 @@ img {
     @media (min-width: 992px) {
       .content-wrap_team .content__title {
         margin-bottom: 60px; } }
-    @media (min-width: 992px) {
-      .content-wrap_team .content__title::after {
-        content: '';
-        width: 50px;
-        height: 3px;
-        background: white;
-        display: block;
-        position: relative;
-        bottom: -30px; } }
+    .content-wrap_team .content__title::after {
+      content: '';
+      width: 50px;
+      height: 3px;
+      background: white;
+      display: block;
+      position: relative;
+      bottom: -30px; }
   .content-wrap_team .b-content__desc {
     font-size: 24px;
     color: #fff;
@@ -6067,14 +6067,20 @@ img {
 
 .s-team-advantages {
   background-image: linear-gradient(-45deg, rgba(52, 0, 131, 0.81) 0%, rgba(0, 159, 123, 0.81) 100%);
-  padding-top: 180px;
+  padding-top: 330px;
   padding-bottom: 150px;
   position: relative;
   background: url(../img/team-bg1.jpg) no-repeat top center;
   background-size: cover; }
-  @media (min-width: 1200px) {
-    .s-team-advantages {
-      padding-top: 370px; } }
+  .s-team-advantages::before {
+    content: '';
+    background: url(../img/bg-team5.png) top center no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 272px;
+    background-size: cover; }
   .s-team-advantages__title {
     margin-bottom: 40px;
     text-align: center; }
@@ -6133,8 +6139,277 @@ img {
 
 .s-team-about {
   position: relative;
-  height: 500px;
-  background: #fff; }
+  background: #fff;
+  padding-bottom: 180px; }
+  .s-team-about::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -200px;
+    height: 200px;
+    background: url(../img/bg-team3.png) no-repeat;
+    background-size: cover; }
+  .s-team-about__inner {
+    padding: 30px 0; }
+    @media (min-width: 768px) {
+      .s-team-about__inner {
+        display: flex;
+        flex-wrap: wrap; } }
+  @media (min-width: 768px) {
+    .s-team-about__left, .s-team-about__right {
+      width: 50%; } }
+  .s-team-about__title {
+    color: #000;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    font-size: 40px;
+    text-transform: uppercase; }
+    .s-team-about__title::after {
+      content: '';
+      width: 50px;
+      height: 3px;
+      background: black;
+      display: block;
+      position: relative;
+      bottom: -30px; }
+  .s-team-about__text {
+    font-size: 18px;
+    font-weight: 300; }
+    @media (min-width: 1200px) {
+      .s-team-about__text {
+        font-size: 24px; } }
+    .s-team-about__text p {
+      margin-bottom: 0.5em; }
+
+.b-mission {
+  position: relative;
+  margin: 20px auto;
+  width: 300px;
+  height: 300px; }
+  @media (min-width: 1400px) {
+    .b-mission {
+      width: 450px;
+      height: 450px; } }
+  .b-mission__inner {
+    background-color: #f8615a;
+    box-shadow: inset 49.5px 49.5px 100px rgba(255, 255, 255, 0.2);
+    padding: 20px 20px 20px 60px;
+    border-radius: 50%;
+    color: white;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+    font-size: 18px;
+    font-weight: 100;
+    overflow: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%; }
+    @media (min-width: 1400px) {
+      .b-mission__inner {
+        padding: 20px 100px 60px 100px;
+        line-height: 1.5;
+        font-size: 22px; } }
+    .b-mission__inner::before {
+      content: '';
+      width: 300px;
+      height: 300px;
+      opacity: 0.5;
+      background-color: #f8615a;
+      box-shadow: 0 0 50px rgba(255, 255, 255, 0.3);
+      position: absolute;
+      border-radius: 50%;
+      top: -30px;
+      left: -15px; }
+      @media (min-width: 1400px) {
+        .b-mission__inner::before {
+          width: 450px;
+          height: 450px;
+          top: -60px;
+          left: -40px; } }
+  .b-mission .shadow {
+    position: absolute;
+    bottom: 45px;
+    right: 74px;
+    z-index: 0;
+    box-shadow: 0 0 80px 40px #f8615a66; }
+  .b-mission__title {
+    font-size: 1.36em;
+    font-weight: 900;
+    position: relative; }
+  .b-mission__desc {
+    position: relative; }
+    .b-mission__desc::before {
+      content: '\2014';
+      margin-right: .3em; }
+
+.b-digits {
+  margin: 40px 0;
+  font-size: 20px;
+  text-align: center; }
+  @media (min-width: 768px) {
+    .b-digits {
+      font-size: 14px;
+      text-align: left;
+      display: flex; } }
+  @media (min-width: 1200px) {
+    .b-digits {
+      font-size: 20px; } }
+  .b-digits__item {
+    margin-bottom: 20px; }
+    @media (min-width: 768px) {
+      .b-digits__item {
+        width: 25%;
+        padding: 0 15px; } }
+    .b-digits__item:first-child .b-digits__num::before, .b-digits__item:last-child .b-digits__num::before {
+      content: '>';
+      font-size: .66em; }
+  .b-digits__num {
+    font-size: 3.6em;
+    font-weight: 900;
+    display: inline-block;
+    line-height: 1;
+    padding-bottom: 15px;
+    margin-bottom: 15px; }
+    .b-digits__num::after {
+      content: '';
+      width: 50px;
+      height: 3px;
+      background: red;
+      display: block;
+      position: relative;
+      bottom: -15px; }
+  .b-digits__desc {
+    font-weight: 300;
+    text-transform: uppercase; }
+
+.s-team-work {
+  position: relative; }
+  .s-team-work::before {
+    content: '';
+    background: url(../img/bg-team6.png) top no-repeat;
+    background-size: cover;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -221px;
+    height: 221px; }
+
+.b-works {
+  margin-top: 50px;
+  text-align: center; }
+  @media (min-width: 768px) {
+    .b-works {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around; } }
+  @media (min-width: 1200px) {
+    .b-works {
+      justify-content: space-between; } }
+  .b-works__item {
+    width: 280px;
+    height: 330px;
+    background: white;
+    margin-bottom: 40px;
+    position: relative;
+    padding: 0 10px 30px 30px;
+    text-align: left;
+    display: inline-block;
+    vertical-align: top; }
+    @media (min-width: 550px) {
+      .b-works__item {
+        margin-right: 40px; } }
+    @media (min-width: 1200px) {
+      .b-works__item {
+        margin-right: 0; } }
+  .b-works__item::before {
+    content: '';
+    opacity: 0.5;
+    border: 1px solid white;
+    position: absolute;
+    left: -20px;
+    right: 20px;
+    bottom: -20px;
+    top: 20px; }
+  .b-works__img {
+    width: 150px;
+    height: 150px;
+    background: #f8615a;
+    border-radius: 50%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 30px; }
+  .b-works__caption {
+    font-size: 20px;
+    font-weight: 800;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    position: relative;
+    text-transform: uppercase; }
+    .b-works__caption::after {
+      content: '';
+      width: 50px;
+      height: 1px;
+      background: black;
+      display: block;
+      position: absolute;
+      left: 0;
+      bottom: 0; }
+  .b-works__desc {
+    font-size: 14px;
+    line-height: 1.3; }
+    .b-works__desc p {
+      position: relative;
+      padding-left: 10px; }
+      .b-works__desc p::before {
+        content: '-';
+        position: absolute;
+        left: 0; }
+  .b-works__item_lamp {
+    background: transparent; }
+    .b-works__item_lamp::before {
+      display: none; }
+  .b-works__lamp {
+    position: absolute;
+    width: 93px;
+    left: 0;
+    top: 80px; }
+    .b-works__lamp::after {
+      content: '';
+      position: absolute;
+      box-shadow: 0 0 150px 60px rgba(255, 255, 255, 0.8);
+      left: 50%;
+      top: 50%; }
+  .b-works__lamp-title {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    font-size: 40px;
+    font-weight: 900;
+    line-height: 1;
+    color: white; }
+    .b-works__lamp-title::before {
+      content: '';
+      width: 50px;
+      height: 3px;
+      background: white;
+      display: block;
+      margin-bottom: 20px; }
+    .b-works__lamp-title::after {
+      content: '';
+      width: 134px;
+      height: 134px;
+      background: white;
+      position: absolute;
+      border-radius: 50%;
+      opacity: .1;
+      right: -41px;
+      bottom: -24px; }
 
 .b-why {
   margin: 30px 0;
